# swag-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
data/: catalog.json
swag/: __init__.py  __main__.py  asgi.py  config.py  exceptions.py  mcp_instructions.py  server.py
swag/adapters/: __init__.py  spec_http.py  spec_json.py
swag/app/: asgi.py  gateway.py  server.py  tools.py
swag/catalog/: models.py  service.py  source.py  tool.py
swag/mcp_tools/: __init__.py  list_services.py  stub.py
swag/models/: __init__.py  api_spec.py  catalog.py  service_entry.py  service_summary.py
swag/operation/: detail.py  models.py  ref_resolver.py  tool.py
swag/prompts/: __init__.py  stub.py
swag/search/: boosters.py  engine.py  extractors.py  fuzzy.py  index.py  keyword.py  models.py  text.py  tool.py
swag/services/: __init__.py  catalog.py  prompt_stub.py  spec.py  stub.py
swag/spec/: decode.py  fetch.py  parsing.py  service.py  validate.py
swag/tools/: __init__.py  stub.py
swag/validation/: __init__.py  api_spec.py
tests/: conftest.py  test_config.py  test_http_app.py
tests/adapters/: test_spec_http.py  test_spec_json.py
tests/app/: test_end_to_end.py  test_gateway.py
tests/catalog/: test_catalog_model.py  test_service.py  test_service_entry.py  test_tool.py
tests/fixtures/: catalog.json
tests/mcp_tools/: test_list_services.py
tests/models/: test_catalog.py  test_service_entry.py
tests/operation/: test_detail.py  test_ref_resolver.py  test_tool.py
(+14 files in other folders)
