[project]
name = "swag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "mcp>=1.27.1",
    "pydantic>=2",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.9",
]

[project.scripts]
swag = "swag.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swag"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["swag", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
isort.known-first-party = ["swag"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["swag", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mcp.*", "mcp.server.*"]
ignore_missing_imports = true
